# Multi-Robot-Environment-Exploration

./: README.md
CV/: README.md
CV/final_project_cv/: .gitignore  package.xml  requirements_ros.txt  setup.cfg
final_project_cv/: README.md  setup.py
final_project_cv/final_project_cv/: centroid_test_source_node.py  target_trace_recorder_node.py  vision_target_detector_node.py
vnc-ros/: .gitignore  Dockerfile  README.md  docker-compose.yml
vnc-ros/ros2_ws/src/: map_data_pa4.npy  (+1 more)
vnc-ros/ros2_ws/src/final_project_cv/: .gitignore  README.md  package.xml  requirements_ros.txt  setup.py
vnc-ros/ros2_ws/src/final_project_cv/docs/: physical_robot_pipeline.md
vnc-ros/ros2_ws/src/final_project_cv/final_project_cv/: demo_finalizer_node.py  target_localizer_node.py  vision_target_detector_node.py
vnc-ros/ros2_ws/src/final_project_cv/launch/: dual_target_tracking_pipeline.launch.py  integrated_two_robot_demo.launch.py  lightweight_targets_gazebo.launch.py  target_tracking_pipeline.launch.py
vnc-ros/ros2_ws/src/final_project_cv/rviz/: integrated_demo.rviz
vnc-ros/ros2_ws/src/final_project_cv/tools/: capture_report_snapshots.py  cleanup_demo_processes.py  generate_report_visuals.py
vnc-ros/ros2_ws/src/final_project_cv/worlds/: lightweight_targets.world
vnc-ros/ros2_ws/src/merger/: README.md  controller.py  coordinator.py  demo.py  grid_a.npy  grid_b.npy  grid_full_truth.npy  ground_truth.json  make_slide_figure.py  make_test_maps.py  map_coordinator.py  package.xml  plot_robustness.py  setup.py  sweep_robustness.py
vnc-ros/ros2_ws/src/merger/merger/: controller.py  map_coordinator.py
vnc-ros/ros2_ws/src/merger/results/: merged_grid.npy  report.json  robustness_sweep.csv  robustness_sweep.json
(+16 files in other folders)
