<?xml version="1.0"?>
<package format="3">
  <name>merger</name>
  <version>0.0.1</version>
  <description>Map merger node for multi-robot exploration</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
